2022-02-15  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin,
	* ctangleboot.bin: Add '#line' after '#endif'.

2022-02-11  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Fix spacing in math expression.

2022-02-05  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.bin: CWEB 4.7 release.

2022-01-29  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (TeX extensions): simplify references.

2022-01-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmem.h: Change type of str_pool to unsigned short for pTeX.
	  We use only 0--511, and use flag 0x100 for Japanese char.

2022-01-21  Karl Berry  <karl@freefriends.org>

	* ac/web2c.ac (kpse_tex_progs): enable hitex by default.

2022-01-18  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (TeX extensions): mention pdftex manual and
	ltnews31.pdf as primary documentation for the cross-engine
	functionality.
	(Introduction): mention TeX Live and teTeX.	

2022-01-16  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Add a third layer to 'byte_mem'.

2022-01-15  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch,
	* tangleboot.pin,
	* weave.ch: Adapt WEB to general conventions.

2022-01-12  Marcel Kr\"uger  <tex@2krueger.de>

	* showstream.ch: if (selector<no_print), rather than <log_only.

2022-01-11  Marcel Kr\"uger  <tex@2krueger.de>

	* showstream.ch: adjust selector for show_stream.
	Bug report from Hironobu Yamashita, 8 Dec 2021:
\newwrite\IO
\immediate\openout\IO=io.tex
\showstream=\IO
\showtokens A \end

This should throw an error "! Missing { inserted." but for now
it just stops silently and if I press [Enter] it crashes.

2022-01-10  Karl Berry  <karl@freefriends.org>

	* tangle-sh.in,
	* ctangleboot-sh.in: be more verbose if AM_V_P.
	https://tug.org/pipermail/tlbuild/2022q1/005001.html
	Mention the Automake manual section which is the source for
	the approach taken:
	https://gnu.org/s/automake/manual/html_node/Multiple-Outputs.html
	